# NASA_CMR_AI_Agent

./: .env.example  .gitignore  Makefile  README.md  __init__.py  __main__.py  config.py  config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/features/debian/debian_base_packages/: core_packages.sh  devcontainer-feature.json  install.sh
.devcontainer/features/debian/programming_languages/: devcontainer-feature.json  install.sh  nodejs.sh
.devcontainer/features/environment/: aliases.sh  bash_history.sh  devcontainer-feature.json  groups.sh  install.sh  permissions.sh  python_environment.sh  variables.sh
.devcontainer/features/mounts/api_keys/: devcontainer-feature.json  install.sh
.devcontainer/features/mounts/development_folder/: devcontainer-feature.json  install.sh
.devcontainer/features/mounts/project_files/: create_launch_file.sh  create_settings_file.sh  create_tasks_file.sh  devcontainer-feature.json  install.sh
.devcontainer/features/mounts/ssh/: devcontainer-feature.json  install.sh
project/: .env.example  Makefile  README.md  __init__.py  __main__.py  __pytest.ini  config.py  config.yaml  pyproject.toml  pytest.ini  requirements.txt
project/lib/: enum_functions.py  environment_functions.py  file_functions.py  http_functions.py  json_functions.py  string_functions.py  time_functions.py
project/src/: ENUMS.py  workflow_manager.py
project/src/data/: api_manager.py  knowledge_graph.py  vector_db_manager.py
project/src/llm/: agent_manager.py  context_manager.py  knowledge_graph.py  llm_provider.py
project/src/llm/agents/: agent.py  agent_state.py  cmr_agent.py  cmr_api_agent.py  data_analysis_and_recommendation_agent.py  enums.py  query_intent_analysis_agent.py  query_interpretation_and_validation_agent.py  response_synthesis_and_formatting_agent.py
project/src/llm/tools/: cmr.py  http.py
project/src/llm/workflow/: agent_state.py  context_manager.py  workflow_manager.py
project/src/user_interface/: data_visualizer.py  gui.py
project/tests/: fixtures.py  test_cases.json  test_data.py
project/tests/llm/: test_llm_provider.py
project/tests/llm/agents/: test_cmr_api_agent.py  test_query_interpretation_and_validation_agent.py
project/tests/llm/workflow/: test_workflow_manager.py
prompts/: 1.txt  2.txt  3.txt
src/: data_provider.py  knowledge_graph.py  llm_provider.py  workflow_manager.py
src/agents/: agent_tools.py  circuit_breaker.py
src/data/: api_manager.py
src/llm/: agent_manager.py  context_manager.py  llm_provider.py
src/llm/agents/: circuit_breaker.py  cmr_agent.py  data_analysis_agent.py  query_agent.py  response_agent.py
src/user_interface/: data_visualizer.py  gui.py
(+5 files in other folders)
